--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="Hackatones Provincia de Santa  Fe" />
+    <meta name="keywords" content="Sistema Base Medra Symfony 3.4" />
     <title>{{app_title}}</title>
 
     {% block stylesheets %}
@@ -20,7 +20,7 @@
     {% endblock %}
 
 {#    TODO: AGREGAR ICONO DE LA PAGINA #}
-{#    <link rel="icon" type="image/x-icon" href="{{ asset("images/logo-precios-santafesinos.png") }}" />#}
+    <link rel="icon" type="image/x-icon" href="{{ asset("images/logo-default.png") }}" />
 
 {#    <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->#}
     <style>
@@ -42,16 +42,16 @@
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">
-
-{#                    TODO: AGREGAR LOGO DEL SISTEMA #}
-{#                    <img class="img-fluid logo-precios" src="{{ asset("images/logo-precios-santafesinos.png") }}"#}
-{#                         alt="Precios Santafesinos">#}
+                    Medra - Soluciones Informaticas
+{#                    TODO: AGREGAR LOGO DEL SISTEMA
+                    <img class="img-fluid logo-default" src="{{ asset("images/logo-default.png") }}"/>
+#}
 
                 </a>
             </div>
             <div class="navbar-header f-right">
                 <a class="navbar-brand" href="#">
-                    <img class="img-fluid logo-santafe" src="{{ asset("images/logo-santafe.png") }}" alt="Santa Fe">
+                    <img class="img-fluid logo-default" src="{{ asset("images/logo-default.png") }}" alt="Logo">
                 </a>
             </div>
 
@@ -130,9 +130,8 @@
             <!-- Grid column -->
             <div class="col-md-12 text-center">
                 <p class="mt-3">
-                    Gobierno de la Provincia de Santa Fe<br>
-                    Ministerio de Producci&oacute;n, Ciencia y Tecnolog&iacute;a<br>
-                    Secretar&iacute;a de Comercio Interior y Servicios
+                    Desarrollado por Medra<br>
+                    Soluciones Informaticas<br>
                 </p>
             </div>
         </div>
