--- a/app/Resources/views/base_backend.html.twig
+++ b/app/Resources/views/base_backend.html.twig
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="precios santafesinos" />
-    <title>Listado de productos Santafesinos</title>
+    <meta name="keywords" content="Listado de Ejemplo" />
+    <title>Listado de Ejemplo</title>
 
 {% block stylesheets %}
     <link href='https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,600,600i,700,700i,800,800i'
@@ -30,7 +30,7 @@
 {#    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>#}
 
     {#    TODO: AGREGAR ICONO DE LA PAGINA #}
-{#    <link rel="icon" type="image/x-icon" href="{{ asset("images/logo-precios-santafesinos.png") }}" />#}
+{#    <link rel="icon" type="image/x-icon" href="{{ asset("images/logo-default.png") }}" />#}
 
 {#    <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->#}
 </head>
@@ -43,12 +43,12 @@
             <div class="navbar-header">
 
 {#                    TODO: AGREGAR LOGO DEL SISTEMA #}
-{#                <img class="img-fluid logo-precios" src="{{ asset("images/logo-precios-santafesinos.png") }}"#}
-{#                     alt="Precios Santafesinos">#}
+{#                <img class="img-fluid logo-precios" src="{{ asset("images/logo-default.png") }}"#}
+
 
             </div>
             <div class="navbar-header navbar-right">
-                <img class="img-fluid logo-santafe" src="{{ asset("images/logo-santafe.png") }}" alt="Santa Fe">
+                <img class="img-fluid logo-default" src="{{ asset("images/logo-default.png") }}" alt="Logo">
             </div>
         </div>
     </nav>
