--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -13,7 +13,7 @@
             {% endfor %}
         </div>
         <div class="col-lg-12">
-            <h4>Listado de productos</h4>
+            <h4>Listado de Personas</h4>
         </div>
     </div>
 
